tests/machine/x/cpp/sum_builtin.mochi.cpp
#include <bits/stdc++.h>
using namespace std;

int main() {
	(cout << sum(vector<int>{1, 2, 3}));
	return 0;
}
